.provarCaches/00D6C0000000xA6UAI/objects/Dataplier__Object_State__c.object
<CustomObject>
    <fields>
        <fullName>Dataplier__orgId__c</fullName>
        <label>orgId</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dataplier__original_states__c</fullName>
        <label>original_states</label>
        <length>65536</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dataplier__updated_states__c</fullName>
        <label>updated_states</label>
        <length>65536</length>
        <type>LongTextArea</type>
    </fields>
    <label>Object State</label>
    <nameField>
        <label>Objects State Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Object_States</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>